[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Game/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Game/game.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Game/camera.gd" type="Script" id=3]
[ext_resource path="res://Scenes/GUI/GUI.tscn" type="PackedScene" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="GUI" parent="." instance=ExtResource( 4 )]

[node name="HoverUI" parent="GUI" index="1"]
Crop_Tilemap = NodePath("../../Map/Crops")
Player_Nodes = [ NodePath("../../Map/Crops/Player1"), NodePath("../../Map/Crops/Player2") ]

[node name="Map" parent="." instance=ExtResource( 1 )]

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 3 )
[connection signal="paused" from="." to="Map" method="_on_Game_paused"]
[connection signal="resumed" from="." to="Map" method="_on_Game_resumed"]
[connection signal="paused" from="GUI" to="." method="_on_GUI_paused"]
[connection signal="resumed" from="GUI" to="." method="_on_GUI_resumed"]
[connection signal="move_completed" from="Map" to="." method="_on_Map_move_completed"]

[editable path="GUI"]

[editable path="Map"]
